2012-11-13  Kjell Ahlstedt  <kjell.ahlstedt@bredband.net>

	ScrolledWindow: Add remove_with_viewport().

	* gtk/src/scrolledwindow.[hg|ccg]: Add remove_with_viewport(). Bug #685739.

2012-11-13  Kjell Ahlstedt  <kjell.ahlstedt@bredband.net>

	Bin, Container::remove(): Restore the floating ref of a managed widget.

	* gtk/src/bin.ccg:
	* gtk/src/container.ccg: If the removed widget is managed, make the added
	ref count floating, avoiding excessive ref counts on widgets that are
	repeatedly added and removed. Bug #685739.

3.6.0:

2012-10-21  Murray Cumming  <murrayc@murrayc.com>

	Create only .tar.xz tarballs.

        * configure.ac: This is what ftp.gnome.org wants, so this avoids
	it doing any repackaging.

2012-10-09  Murray Cumming  <murrayc@murrayc.com>

        ComboBox: set_active_id(): Add documentation.

        * gtk/src/combobox.hg: Add documentation so we can use our own
	@newin{} line.

2012-10-09  Murray Cumming  <murrayc@murrayc.com>

        ComboBox: Add set_active_id(), deprecating get_active_id(string).

        * gtk/src/combobox.hg: We just got the name wrong before, calling it
	get instead of set. Also gave it the bool return type from the 
	C function.
	Bug #685801 (Phil Wolff)

2012-10-07  Murray Cumming  <murrayc@murrayc.com>

        WindowGroup: Add list_windows() and get_current_grab().

        * gtk/src/window.hg: Wrap these C functions.

2012-10-07  Murray Cumming  <murrayc@murrayc.com>

        TargetList: Add some add_*_targets() methods.

        * gtk/src/targetlist.[hg|ccg]: Add add_text_targets(), 
	add_rich_text_targets(), add_image_targets() and 
	add_uri_targets().

2012-10-07  Murray Cumming  <murrayc@murrayc.com>

        TreeModel*: Add some _IGNORE() lines.

        * gtk/src/treemodelfilter.hg:
        * gtk/src/treemodelsort.hg: Add _IGNORE()s for functions that 
	have already been wrapped.

2012-10-07  Murray Cumming  <murrayc@murrayc.com>

        Require the latest mm-common.
