@@ -3232,4 +3232,23 @@ Since: 2.6
 </return>
 </function>
 
+<function name="gtk_builder_get_objects">
+<description>
+Gets all objects that have been constructed by the Gtk::Builder.
+
+Since: 3.8
+
+</description>
+<parameters>
+<parameter name="builder">
+<parameter_description> a #GtkBuilder
+</parameter_description>
+</parameter>
+</parameters>
+<return> a vector containing all the objects
+constructed by the Gtk::Builder instance.
+
+</return>
+</function>
+
 </root>
