@@ -1,3 +1,11 @@
+2012-12-03   Hub Figuière  <hub@figuiere.net>
+
+	Gtk::Builder: Add get_objects().
+
+	* gtk/src/builder.hg: Add get_objects().
+	* gtk/src/gtk_docs_override.xml: Change the documentation to suit this C++ API.
+	Bug #666823
+
 2012-11-13  Kjell Ahlstedt  <kjell.ahlstedt@bredband.net>
 
 	ScrolledWindow: Add remove_with_viewport().
